syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "LucasNotes.NoteService.Protos.Folder";

package FolderManager;

message FolderDto {
	int32 Id = 1;
	string Name = 2;
	int32 ParentId = 3;
	int32 UserId = 4;
}

message GetFoldersReply {
	repeated FolderDto Folders = 1;
}

message DeleteFolderRequest {
	int32 Id = 1;
	int32 UserId = 2;
}

message SuccessMsg {
	bool Success = 1;
}

message UpdateFolderNameRequest {
	int32 Id = 1;
	string Name = 2;
	int32 UserId = 3;
}

message UpdateFolderParentRequest {
	int32 Id = 1;
	int32 ParentId = 2;
	int32 UserId = 3;
}

message GetFoldersRequest {
	int32 UserId = 1;
}

service FolderManager {
	rpc GetFolders (GetFoldersRequest) returns (GetFoldersReply);
	rpc DeleteFolder (DeleteFolderRequest) returns (SuccessMsg);
	rpc UpdateFolderName (UpdateFolderNameRequest) returns (SuccessMsg);
	rpc UpdateFolderParent (UpdateFolderParentRequest) returns (SuccessMsg);
	rpc AddFolder (FolderDto) returns (SuccessMsg);
}
